[gd_scene load_steps=9 format=3 uid="uid://dnxuwpx1caj8p"]

[ext_resource type="Script" path="res://scripts/UI/battle_UI/characters_UI/speed_dice/speed_dice/BaseSpeedDice.gd" id="1_hd3c4"]
[ext_resource type="Texture2D" uid="uid://c3xdcbpdq5i6k" path="res://sprites/UI/battle_UI/characters_UI/speed_dice/speed_dice/teammate_dice/speed_dice_default.png" id="2_bqdqs"]
[ext_resource type="Texture2D" uid="uid://btjotx601jjj2" path="res://sprites/UI/battle_UI/characters_UI/speed_dice/speed_dice/teammate_dice/speed_dice_used.png" id="3_kmgwx"]
[ext_resource type="Texture2D" uid="uid://bou4hxiwptjso" path="res://sprites/UI/battle_UI/characters_UI/speed_dice/speed_dice/teammate_dice/speed_dice_brake.png" id="4_mbnwl"]
[ext_resource type="Texture2D" uid="uid://dsgyxtvbo0onp" path="res://sprites/UI/battle_UI/characters_UI/speed_dice/speed_dice/teammate_dice/border_of_selected_speed_dice.png" id="5_682yd"]
[ext_resource type="FontFile" uid="uid://bjpyveek057b3" path="res://fonts/ITC Serif Gothic LT Black.ttf" id="6_nq17l"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_uba3a"]
frames = 3
pause = true
one_shot = true
frame_0/texture = ExtResource("2_bqdqs")
frame_0/duration = 0.0
frame_1/texture = ExtResource("3_kmgwx")
frame_1/duration = 0.0
frame_2/texture = ExtResource("4_mbnwl")
frame_2/duration = 0.0

[sub_resource type="FontVariation" id="FontVariation_ut7p0"]
base_font = ExtResource("6_nq17l")

[node name="BaseSpeedDice" type="Button"]
custom_minimum_size = Vector2i(181, 205)
offset_right = 181.0
offset_bottom = 205.0
focus_mode = 0
mouse_force_pass_scroll_events = false
flat = true
script = ExtResource("1_hd3c4")

[node name="States" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -22.0
offset_right = 202.0
offset_bottom = 228.0
pivot_offset = Vector2(109, 125)
mouse_filter = 2
texture = SubResource("AnimatedTexture_uba3a")
stretch_mode = 3

[node name="Border" type="TextureRect" parent="States"]
texture_filter = 6
layout_mode = 0
offset_right = 218.0
offset_bottom = 250.0
mouse_filter = 2
texture = ExtResource("5_682yd")
metadata/_edit_lock_ = true

[node name="SpeedValue" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_right = 178.0
offset_bottom = 203.0
theme_override_colors/font_color = Color(0.996078, 0.858824, 0.403922, 1)
theme_override_fonts/font = SubResource("FontVariation_ut7p0")
theme_override_font_sizes/font_size = 115
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_base_speed_dice_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_base_speed_dice_mouse_exited"]
